--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 }
 
 .logo {
-  height: 600px;
+  max-height: 600px;
+  height: auto;
+  width: 100%;
 }
+
 
     :root {
       --white: #ffffff;
@@ -275,3 +278,4 @@
 
 </body>
 </html>
+
